--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     background-color: #0a0a0a;
-    padding: 4rem 0 2rem;
+    padding: 4rem 4rem 2rem;
     border-top: 1px solid #222;
 }
 
